fix: to support clerk auth
