# apps/services/inbound-webhooks-api/internal/adapters/connectrpc/auth_handler.go
@@ -8,7 +8,6 @@ import (
 	"apps/services/inbound-webhooks-api/internal/app"
 	boot "libs/backend/boot"
 	userEntities "libs/backend/domain/user/entities"
-	userValueObjects "libs/backend/domain/user/valueobjects"
 	commonv1 "libs/backend/proto-gen/go/common/v1"
 	inboundwebhooksapiv1 "libs/backend/proto-gen/go/webhooks/inboundwebhooksapi/v1"
 )
@@ -28,21 +27,21 @@ func NewAuthHandler(logger boot.Logger, application app.Application) *AuthHandle
 	}
 }
 
-// UserRegistered handles incoming Webhooks from Auth0 and will attach the message
+// ClerkAuthUserEvent handles incoming Webhooks from Auth0 and will attach the message
 // to an exchange within the message broker
-func (h *AuthHandler) UserRegistered(
+func (h *AuthHandler) ClerkAuthUserEvent(
 	ctx context.Context,
-	req *connect.Request[inboundwebhooksapiv1.UserRegisteredRequest],
+	req *connect.Request[inboundwebhooksapiv1.ClerkUserAuthEventRequest],
 ) (*connect.Response[commonv1.Empty], error) {
 	// Parse CommonID
-	commonID := userValueObjects.NewCommonIDFromString(req.Msg.CommonId)
-	emailAddress := userValueObjects.NewEmailAddress(req.Msg.EmailAddress)
+	// commonID := userValueObjects.NewCommonIDFromString(req.Msg.CommonId)
+	// emailAddress := userValueObjects.NewEmailAddress(req.Msg.EmailAddress)
 
 	if err := h.Application.AuthService.RegisterUser(
 		userEntities.NewUser(
-			userEntities.WithCommonID(commonID),
-			userEntities.WithEmailAddress(emailAddress),
-			userEntities.WithUserUsername(req.Msg.Username),
+			// userEntities.WithCommonID(commonID),
+			// userEntities.WithEmailAddress(emailAddress),
+			// userEntities.WithUserUsername(req.Msg.Username),
 			userEntities.WithMetadata(make(map[string]any, 0)),
 		),
 	); err != nil {
